--- a/_posts/12-04-java集合2.md
+++ b/_posts/12-04-java集合2.md
@@ -1,39 +1,43 @@
 一、HashMap和HashSet的区别?
-HashSet的底层就是基于HashMap实现的。HashMap实现了Map接口，存储键值对，调用put()方法向Map中添加元素，HashMap使用键(key)计算HashCode. HashSet实现了
-Set接口，仅存储对象，调用add()方法向Set中添加元素，HashSet使用成员对象来计算hashcode值，对于两个对象来说两个hashcode可能相同，所以equals()方法用来
+HashSet的底层就是基于HashMap实现的。HashMap实现了Map接口，存储键值对，调用put()方法向Map中添加元素，
+HashMap使用键(key)计算HashCode. HashSet实现了Set接口，仅存储对象，调用add()方法向Set中添加元素，
+HashSet使用成员对象来计算hashcode值，对于两个对象来说两个hashcode可能相同，所以equals()方法用来
 判断对象的相等性
 二、HashMap底层实现
-底层是数组和链表结合在一起使用，也就是链表散列。HashMap 通过key的hashCode经过扰动函数处理过后得到 hash 值，然后通过 (n - 1) & hash 判断当前元素
-存放的位置（这里的 n 指的是数组的长度），如果当前位置存在元素的话，就判断该元素与要存入的元素的 hash值以及key是否相同，如果相同的话，直接覆盖，不相
-同就通过拉链法解决冲突。  所谓扰动函数指的就是HashMap的hash方法。使用 hash 方法也就是扰动函数是为了防止一些实现比较差的 hashCode() 方法
-换句话说使用扰动函数之后可以减少碰撞。
-所谓 “拉链法” 就是：将链表和数组相结合。也就是说创建一个链表数组，数组中每一格就是一个链表。若遇到哈希冲突，则将冲突的值加到链表中即可。
+底层是数组和链表结合在一起使用，也就是链表散列。HashMap 通过key的hashCode经过扰动函数处理过后得到 hash 值，
+然后通过 (n - 1) & hash 判断当前元素存放的位置（这里的 n 指的是数组的长度），如果当前位置存在元素的话，就判
+断该元素与要存入的元素的 hash值以及key是否相同，如果相同的话，直接覆盖，不相同就通过拉链法解决冲突。  所谓扰
+动函数指的就是HashMap的hash方法。使用 hash 方法也就是扰动函数是为了防止一些实现比较差的 hashCode() 方法换句
+话说使用扰动函数之后可以减少碰撞。所谓 “拉链法” 就是：将链表和数组相结合。也就是说创建一个链表数组，数组中每一
+格就是一个链表。若遇到哈希冲突，则将冲突的值加到链表中即可。
  JDK1.8之后在解决哈希冲突时有了较大的变化，当链表长度大于阈值（默认为8）时，将链表转化为红黑树，以减少搜索时间。
  三、HashMap的长度为什么是2的幂次方？
- 为了能让 HashMap 存取高效，尽量较少碰撞，也就是要尽量把数据分配均匀。我们上面也讲到了过了，Hash 值的范围值-2147483648到2147483647，前后加起来大概
- 40亿的映射空间，只要哈希函数映射得比较均匀松散，一般应用是很难出现碰撞的。但问题是一个40亿长度的数组，内存是放不下的。所以这个散列值是不能直接拿来用的。
- 用之前还要先做对数组的长度取模运算，得到的余数才能用来要存放的位置也就是对应的数组下标。这个数组下标的计算方法是“ (n - 1) & hash”。（n代表数组长度）。
+ 为了能让 HashMap 存取高效，尽量较少碰撞，也就是要尽量把数据分配均匀。我们上面也讲到了过了，Hash 值的范围值
+ -2147483648到2147483647，前后加起来大概40亿的映射空间，只要哈希函数映射得比较均匀松散，一般应用是很难出现碰撞的。
+ 但问题是一个40亿长度的数组，内存是放不下的。所以这个散列值是不能直接拿来用的。用之前还要先做对数组的长度取模运算，
+ 得到的余数才能用来要存放的位置也就是对应的数组下标。这个数组下标的计算方法是“ (n - 1) & hash”。（n代表数组长度）。
  这也就解释了 HashMap 的长度为什么是2的幂次方。
  四、HashMap 多线程操作导致死循环问题
- 主要原因在于 并发下的Rehash 会造成元素之间会形成一个循环链表。不过，jdk 1.8 后解决了这个问题，但是还是不建议在多线程下使用 HashMap,
- 因为多线程下使用HashMap还是会存在其他问题比如数据丢失。并发环境下推荐使用 ConcurrentHashMap。
+ 主要原因在于 并发下的Rehash 会造成元素之间会形成一个循环链表。不过，jdk 1.8 后解决了这个问题，但是还是不建议在多线
+ 程下使用 HashMap,因为多线程下使用HashMap还是会存在其他问题比如数据丢失。并发环境下推荐使用 ConcurrentHashMap。
  五、ConcurrentHashMap和Hashtable的区别？
  ConcurrentHashMap和Hashtable的区别主要体现在实现线程安全的方式上不同。
- 1.底层数据结构： JDK1.7的 ConcurrentHashMap 底层采用 分段的数组+链表 实现，JDK1.8 采用的数据结构跟HashMap1.8的结构一样，数组+链表/红黑二叉树。
- Hashtable 和 JDK1.8 之前的 HashMap 的底层数据结构类似都是采用 数组+链表 的形式，数组是 HashMap 的主体，链表则是主要为了解决哈希冲突而存在的；
- 2.实现线程安全的方式（重要）： ① 在JDK1.7的时候，ConcurrentHashMap（分段锁） 对整个桶数组进行了分割分段(Segment)，每一把锁只锁容器其中一部分数据，
- 多线程访问容器里不同数据段的数据，就不会存在锁竞争，提高并发访问率。 到了 JDK1.8 的时候已经摒弃了Segment的概念，而是直接用 Node 数组+链表+红黑树的
- 数据结构来实现，并发控制使用 synchronized 和 CAS 来操作。（JDK1.6以后 对 synchronized锁做了很多优化） 整个看起来就像是优化过且线程安全的 HashMap，
- 虽然在JDK1.8中还能看到 Segment 的数据结构，但是已经简化了属性，只是为了兼容旧版本；② Hashtable(同一把锁) :使用 synchronized 来保证线程安全，
- 效率非常低下。当一个线程访问同步方法时，其他线程也访问同步方法，可能会进入阻塞或轮询状态，如使用 put 添加元素，另一个线程不能使用 put 添加元素，
- 也不能使用 get，竞争会越来越激烈效率越低。
+ 1.底层数据结构： JDK1.7的 ConcurrentHashMap 底层采用 分段的数组+链表 实现，JDK1.8 采用的数据结构跟HashMap1.8的结
+ 构一样，数组+链表/红黑二叉树。Hashtable 和 JDK1.8 之前的 HashMap 的底层数据结构类似都是采用 数组+链表 的形式，数组
+ 是 HashMap 的主体，链表则是主要为了解决哈希冲突而存在的；
+ 2.实现线程安全的方式（重要）： ① 在JDK1.7的时候，ConcurrentHashMap（分段锁） 对整个桶数组进行了分割分段(Segment)，
+ 每一把锁只锁容器其中一部分数据，多线程访问容器里不同数据段的数据，就不会存在锁竞争，提高并发访问率。 到了 JDK1.8 的时
+ 候已经摒弃了Segment的概念，而是直接用 Node 数组+链表+红黑树的数据结构来实现，并发控制使用 synchronized 和 CAS 来操作。
+ （JDK1.6以后 对 synchronized锁做了很多优化） 整个看起来就像是优化过且线程安全的 HashMap，
+ 虽然在JDK1.8中还能看到 Segment 的数据结构，但是已经简化了属性，只是为了兼容旧版本；② Hashtable(同一把锁) :使用 
+ synchronized 来保证线程安全，效率非常低下。当一个线程访问同步方法时，其他线程也访问同步方法，可能会进入阻塞或轮询状态，
+ 如使用 put 添加元素，另一个线程不能使用 put 添加元素，也不能使用 get，竞争会越来越激烈效率越低。
  六、ConcurrentHashMap线程安全的具体实现方式/底层具体实现？
  JDK1.7 首先将数据分为一段一段的存储，然后给每一段数据配一把锁，当一个线程占用锁访问其中一个段数据时，其他段的数据也能被其他线程访问。
  ConcurrentHashMap 是由 Segment 数组结构和 HashEntry 数组结构组成。
  Segment 实现了 ReentrantLock,所以 Segment 是一种可重入锁，扮演锁的角色。HashEntry 用于存储键值对数据。
  一个 ConcurrentHashMap 里包含一个 Segment 数组。Segment 的结构和HashMap类似，是一种数组和链表结构，一个 Segment 包含一个 HashEntry 数组，
- 每个 HashEntry 是一个链表结构的元素，每个 Segment 守护着一个HashEntry数组里的元素，当对 HashEntry 数组的数据进行修改时，必须首先获得对应的Segment
- 的锁。
+ 每个 HashEntry 是一个链表结构的元素，每个 Segment 守护着一个HashEntry数组里的元素，当对 HashEntry 数组的数据进行修改时，必须首先获得对应的        Segment的锁。
  JDK1.8  ConcurrentHashMap取消了Segment分段锁，采用CAS和synchronized来保证并发安全。数据结构跟HashMap1.8的结构类似，数组+链表/红黑二叉树。
  Java 8在链表长度超过一定阈值(8)时将链表(寻址时间复杂度为O(N))转换为红黑树(寻址时间复杂度为O(log(N)))
  synchronized只锁定当前链表或红黑二叉树的首节点，这样只要hash不冲突，就不会产生并发，效率又提升N倍。
