--- a/_posts/分布式、集群、微服务.md
+++ b/_posts/分布式、集群、微服务.md
@@ -25,3 +25,11 @@
 <p>将一个大的系统划分为多个业务模块，业务模块分别部署到不同的机器上，各个业务模块之间通过接口进行数据交互。区别分布式的方式是根据不同机器不同业务。
 上面：service A、B、C、D 分别是业务组件，通过API Geteway进行业务访问。
 注：分布式需要做好事务管理。</p>
+<h2>2.集群模式</h2>
+<p>集群模式是不同服务器部署同一套服务对外访问，实现服务的负载均衡。区别集群的方式是根据部署多台服务器业务是否相同。</p>
+<p>注：集群模式需要做好session共享，确保在不同服务器切换的过程中不会因为没有获取到session而中止退出服务。</p>
+<p>一般配置Nginx的负载容器实现：静态资源缓存、Session共享可以附带实现，Nginx支持5000个并发量。</p>
+<h2>分布式是否属于微服务？</h2>
+<p>答案是肯定的。微服务的意思也就是将模块拆分成一个独立的服务单元通过接口来实现数据的交互。</p>
+<h2>微服务架构</h2>
+<p>微服务的设计是为了不因为某个模块的升级和BUG影响现有的系统业务。微服务与分布式的细微差别是，微服务的应用不一定是分散在多个服务器上，他也可以是同一个服务器。</p>
