--- a/_posts/框架.md
+++ b/_posts/框架.md
@@ -1,21 +1,93 @@
 <h1>Dubbo</h1>
 <h2>1. Dubbo中zookeeper做注册中心，如果注册中心集群都挂掉，发布者和订阅者之间还能通信么？</h2>
 
+```
+ 1、【提供者】在【启动】时，向注册中心zk 【注册】自己提供的服务。
+ 2、【消费者】在【启动】时，向注册中心zk 【订阅】自己所需的服务。
+ 
+  可以
+
+1.启动dubbo时，消费者会从zk拉取注册的生产者的地址接口等数据，缓存在本地。每次调用时，按照本地存储的地址进行调用。
+2.注册中心对等集群，任意一台宕掉后，会自动切换到另一台 。
+3.注册中心全部宕掉，服务提供者和消费者仍可以通过本地缓存通讯 。
+4.服务提供者无状态，任一台 宕机后，不影响使用 。
+5.服务提供者全部宕机，服务消费者会无法使用，并无限次重连等待服务者恢复 。
+```
+
 <h2>2. dubbo服务负载均衡策略？</h2>
+
+```
+当服务提供方是集群的时候，为了避免大量请求一直落到一个或几个服务提供方机器上，从而使这些机器负载很高，甚至打死，
+需要做一定的负载均衡策略。Dubbo提供了多种均衡策略，缺省为random，也就是每次随机调用一台服务提供者的机器
+
+Dubbo提供的负载均衡策略
+Random LoadBalance：随机策略。按照概率设置权重，比较均匀，并且可以动态调节提供者的权重。
+RoundRobin LoadBalance：轮询策略。轮询，按公约后的权重设置轮询比率。会存在执行比较慢的服务提供者堆积请求的情况，
+比如一个机器执行的非常慢，但是机器没有挂调用（如果挂了，那么当前机器会从Zookeeper的服务列表删除），当很多新的请求到达该机器后，
+由于之前的请求还没有处理完毕，会导致新的请求被堆积，久而久之，所有消费者调用这台机器上的请求都被阻塞。
+LeastActive LoadBalance：最少活跃调用数。如果每个提供者的活跃数相同，则随机选择一个。在每个服务提供者里面维护者一个活跃数计数器，
+用来记录当前同时处理请求的个数，也就是并发处理任务的个数。所以如果这个值越小说明当前服务提供者处理的速度很快或者当前机器的负载比较低，
+所以路由选择时候就选择该活跃度最小的机器。如果一个服务提供者处理速度很慢，由于堆积，那么同时处理的请求就比较多，也就是活跃调用数目越大，
+这也使得慢的提供者收到更少请求，因为越慢的提供者的活跃度越来越大。
+ConsistentHash LoadBalance：一致性Hash策略。一致性Hash，可以保证相同参数的请求总是发到同一提供者，当某一台提供者挂了时，
+原本发往该提供者的请求，基于虚拟节点，平摊到其他提供者，不会引起剧烈变动。
+```
 
 <h2>3. Dubbo在安全机制方面是如何解决的？</h2>
 
+```
+Dubbo通过Token令牌防止用户绕过注册中心直连，然后在注册中心上管理授权。Dubbo还提供服务黑白名单，来控制服务所允许的调用方。
+
+```
+
 <h2>4. dubbo连接注册中心和直连的区别</h2>
+
+```
+在开发及测试环境下，经常需要绕过注册中心，只测试指定服务提供者，这时候可能需要点对点直连， 点对点直联方式，将以服务接口为单位，
+忽略注册中心的提供者列表，服务注册中心，动态的注册和发现服务，使服务的位置透明，并通过在消费方获取服务提供方地址列表，
+实现软负载均衡和Failover， 注册中心返回服务提供者地址列表给消费者，如果有变更，注册中心将基于长连接推送变更数据给消费者。 
+
+服务消费者，从提供者地址列表中，基于软负载均衡算法，选一台提供者进行调用，如果调用失败，再选另一台调用。
+注册中心负责服务地址的注册与查找，相当于目录服务，服务提供者和消费者只在启动时与注册中心交互，注册中心不转发请求，
+服务消费者向注册中心获取服务提供者地址列表，并根据负载算法直接调用提供者，注册中心，服务提供者，服务消费者三者之间均为长连接，
+监控中心除外，注册中心通过长连接感知服务提供者的存在，服务提供者宕机，注册中心将立即推送事件通知消费者，
+注册中心和监控中心全部宕机，不影响已运行的提供者和消费者，消费者在本地缓存了提供者列表，注册中心和监控中心都是可选的，服务消费者可以直连服务提供者
+```
 
 <h2>5. dubbo服务集群配置（集群容错模式）</h2>
 
 <h2>6. dubbo通信协议dubbo协议为什么要消费者比提供者个数多？</h2>
 
+```
+因dubbo协议采用单一长连接，假设网络为千兆网卡(1024Mbit=128MByte)，根据测试经验数据每条连接最多
+只能压满7MByte(不同的环境可能不一样，供参考)，理论上1个服务提供者需要20个服务消费者才能压满网卡。
+```
+
 <h2>7. dubbo通信协议dubbo协议为什么不能传大包？</h2>
+
+```
+因dubbo协议采用单一长连接，如果每次请求的数据包大小为500KByte，假设网络为千兆网卡(1024Mbit=128MByte)，
+每条连接最大7MByte(不同的环境可能不一样，供参考)，单个服务提供者的TPS(每秒处理事务数)最大为：128MByte / 500KByte = 262。
+单个消费者调用单个服务提供者的TPS(每秒处理事务数)最大为：7MByte / 500KByte = 14。如果能接受，可以考虑使用，否则网络将成为瓶颈。
+```
 
 <h2>8. dubbo通信协议dubbo协议为什么采用异步单一长连接</h2>
 
+```
+因为服务的现状大都是服务提供者少，通常只有几台机器，而服务的消费者多，可能整个网站都在访问该服务，
+比如Morgan的提供者只有6台提供者，却有上百台消费者，每天有1.5亿次调用，如果采用常规的hessian服务，
+服务提供者很容易就被压跨，通过单一连接，保证单一消费者不会压死提供者，长连接，减少连接握手验证等，
+并使用异步IO，复用线程池，防止C10K问题。
+
+```
+
 <h2>9. dubbo通信协议dubbo协议适用范围和适用场景</h2>
+
+```
+适用范围：传入传出参数数据包较小（建议小于100K），消费者比提供者个数多，单一消费者无法压满提供者，
+尽量不要使用dubbo协议传输大文件或超大字符串
+使用场景：常规远程服务方法调用
+```
 
 <h2>10. RMI协议</h2>
 
@@ -70,7 +142,18 @@
 
 <h2>1.什么是Spring Cloud？</h2>
 
+```
+Spring Cloud是基于SpringBoot 提供的一套微服务解决方案，包括服务注册与发现，配置中心，全链路监控，服务网关，负载均衡，熔断器等组件。
+```
+
 <h2>2.使用Spring Cloud有什么优势？</h2>
+
+```
+  1、易于开发和维护
+  2、单个微服务启动较快
+  3、技术栈不受限
+  4、按需伸缩
+```
 
 <h2>3.服务注册和发现是什么意思？Spring Cloud如何实现？</h2>
 
