--- a/_posts/框架.md
+++ b/_posts/框架.md
@@ -160,9 +160,11 @@ Spring Cloud是基于SpringBoot 提供的一套微服务解决方案，包括服
 <h2>4.负载平衡的意义什么？</h2>
 
 <h2>5.什么是Hystrix？它如何实现容错？</h2>
+Hystrix 是一个用于处理分布式系统的延迟和容错的开源库，在分布式系统里，许多依赖会不可避免的调用失败，比如超时，异常等等，Hystrix 能够保证在一个微服务出问题的前提下，不会导致整个服务失败，避免级联故障，以提高分布式系统的弹性。向调用方返回一个符合预期的、可处理的备选响应（FallBack），而不是长时间的等待或者抛出调用方无法处理的异常，这样就保证了服务调用方的线程不会被长时间、不必要地占用、从而避免了故障在分布式系统中的蔓延，乃至雪崩。
+在SpringCloud 框架里熔断机制通过 Hystrix 实现，Hystrix 会监控微服务间调用的状况，当失败的调用到一定阈值，缺省是5秒内调用20次，
+如果失败，就会启动熔断机制。熔断机制的注解是 @HystrixCommand；
 
-<h2>6.什么是Hystrix断路器？</h2>
+<h2>6.什么是Netflix Feign？它的优点是什么？</h2>
 
-<h2>7.什么是Netflix Feign？它的优点是什么？</h2>
-
-<h2>8.什么是Spring Cloud Bus？</h2>
+<h2>7.什么是Spring Cloud Bus？</h2>
+分布式消息队列，是对Kafka, MQ的封装。
