--- a/_posts/每日一道算法题.md
+++ b/_posts/每日一道算法题.md
@@ -66,3 +66,22 @@ class Solution {
     }
     
 }
+
+<h2>2.从键盘输入m和n，定义n是第一个数，之后的每个数都是前一个的平方根 ，一共有m个数，计算总和</h2>
+
+public class a {
+
+    public static void main(String[] args) {
+        //求平方根 
+        Scanner scan = new Scanner(System.in);
+        float n = scan.nextFloat();
+        int m = scan.nextInt();
+        float sum = n;
+        for(int i=2;i<=m;i++) {
+             sum += Math.sqrt(n);
+             n = (float) Math.sqrt(n);
+        }
+        System.out.println("sum=" +sum);
+    }
+    
+}
