--- a/_posts/框架.md
+++ b/_posts/框架.md
@@ -105,11 +105,21 @@ Spring 应用程序并且尽可能减少你的配置文件。简单来说就是S
 
 <h2>4.如何重新加载Spring Boot上的更改，而无需重新启动服务器？</h2>
 
+Spring Boot有一个开发工具（DevTools）模块，它有助于提高开发人员的生产力。Java开发人员面临的一个主要挑战是将文件更改自动部署到服务器并自动重启服务器。使用DEV工具，嵌入式tomcat将重新启动。
+
 <h2>5.Spring Boot中的监视器是什么？</h2>
+
+Spring boot 监视器可帮助您访 问生产环境中正在运行的应用程序的当前状态。有几个指标必须在生产环境中进行检查和 监控。即使一些外部应用程序可能正在使用这些服务来向相关人员触发警报消息。监视器 模块公开了一组可直接作为 HTTP URL 访问的 REST 端点来检查状态。
 
 <h2>6.如何在Spring Boot中禁用Actuator端点安全性？</h2>
 
+默认情况下，所有敏感的HTTP端点都是安全的，只有具有ACTUATOR角色的用户才能访问它们。
+安全性是使用标准的HttpServletRequest.isUserInRole方法实施的。 我们可以使用management.security.enabled = false 来禁用安全性。
+只有在执行机构端点在防火墙后访问时，才建议禁用安全性。
+
 <h2>7.如何在自定义端口上运行Spring Boot应用程序？</h2>
+
+为了在自定义端口上运行 Spring Boot 应用程序，您可以在 application.properties 中指定端口。
 
 <h2>8.什么是YAML？</h2>
 
